More stuff works.  Less stuff broken

--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,7 @@
         <script type="text/javascript" src="js/jquery-ui-1.8.9.custom.min.js"></script>
         <script type="text/javascript" src="js/cleditor/jquery.cleditor.js"></script>
         <script type="text/javascript" src="js/cleditor/jquery.cleditor.bbcode.js"></script>
+        <script type="text/javascript" src="js/bb-code-parser.js"></script>
         <script type="text/javascript" src="js/shortcut.js"></script>
         <link rel="shortcut icon" type="image/png" href="/favicon.png" />
         <link rel="stylesheet" type="text/css" href="css/smoothness/jquery-ui-1.8.9.custom.css" />
