--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
         <script type="text/javascript" src="js/json2-min.js"></script>
         <script type="text/javascript" src="js/underscore-min.js"></script>
         <script type="text/javascript" src="js/jquery-1.5.2.js"></script>
-        <script type="text/javascript" src="js/raphael-min.js"></script>
+        <script type="text/javascript" src="js/raphael.js"></script>
         <script type="text/javascript" src="js/sprintf-min.js"></script>
         <script type="text/javascript" src="js/jquery.qtip-min.js"></script>
         <script type="text/javascript" src="js/jquery.scrollTo-min.js"></script>
