--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,6 @@
 <html>
     <head>
+        <meta charset="utf-8" />
         <script type="text/javascript" src="js/json2-min.js"></script>
         <script type="text/javascript" src="js/underscore-min.js"></script>
         <script type="text/javascript" src="js/jquery-1.5.2.js"></script>
