--- a/public/index.html
+++ b/public/index.html
@@ -1,18 +1,18 @@
 <html>
     <head>
         <meta charset="utf-8" />
-        <script type="text/javascript" src="js/json2-min.js"></script>
-        <script type="text/javascript" src="js/underscore-min.js"></script>
-        <script type="text/javascript" src="js/jquery-1.5.2.js"></script>
-        <script type="text/javascript" src="js/raphael.js"></script>
-        <script type="text/javascript" src="js/sprintf-min.js"></script>
-        <script type="text/javascript" src="js/jquery.qtip-min.js"></script>
-        <script type="text/javascript" src="js/jquery.scrollTo-min.js"></script>
-        <script type="text/javascript" src="js/jquery-ui-1.8.9.custom.min.js"></script>
-        <script type="text/javascript" src="js/cleditor/jquery.cleditor.js"></script>
-        <script type="text/javascript" src="js/cleditor/jquery.cleditor.bbcode.js"></script>
-        <script type="text/javascript" src="js/bb-code-parser.js"></script>
-        <script type="text/javascript" src="js/shortcut.js"></script>
+        <script type="text/javascript" src="js/lib/json2-min.js"></script>
+        <script type="text/javascript" src="js/lib/underscore-min.js"></script>
+        <script type="text/javascript" src="js/lib/jquery-1.5.2.js"></script>
+        <script type="text/javascript" src="js/lib/raphael.js"></script>
+        <script type="text/javascript" src="js/lib/sprintf-min.js"></script>
+        <script type="text/javascript" src="js/lib/jquery.qtip-min.js"></script>
+        <script type="text/javascript" src="js/lib/jquery.scrollTo-min.js"></script>
+        <script type="text/javascript" src="js/lib/jquery-ui-1.8.9.custom.min.js"></script>
+        <script type="text/javascript" src="js/lib/cleditor/jquery.cleditor.js"></script>
+        <script type="text/javascript" src="js/lib/cleditor/jquery.cleditor.bbcode.js"></script>
+        <script type="text/javascript" src="js/lib/bb-code-parser.js"></script>
+        <script type="text/javascript" src="js/lib/shortcut.js"></script>
         <link rel="shortcut icon" type="image/png" href="/favicon.png" />
         <link rel="stylesheet" type="text/css" href="css/smoothness/jquery-ui-1.8.9.custom.css" />
         <link rel="stylesheet" type="text/css" href="css/cleditor/jquery.cleditor.css" />
