Some avatar nonsense

--- a/public/panels/edituser.html
+++ b/public/panels/edituser.html
@@ -1,5 +1,4 @@
-<form action="/avatar" method="POST" target="upload-target" enctype="multipart/form-data">
-    <input type="file" name="file" />
-    <p><input type="submit" value="Upload Avatar" />
+<form action="/avatar" method="POST" target="avatar-upload-target" enctype="multipart/form-data" id="avatar-upload-form">
+    <input type="file" name="file" id="avatar-upload-file" />
 </form>
-<iframe id="upload-target" name="upload-target" src=""></iframe>
+<iframe id="avatar-upload-target" name="avatar-upload-target" src=""></iframe>
