--- a/public/panels/login.html
+++ b/public/panels/login.html
@@ -1,5 +1,5 @@
 <form id="login-form">
-    <p><label for="username-field">Handle</label>
+    <p><label for="login-username-field">Handle</label>
     <br /><input name="login-username" id="login-username-field" /></p>
     <p><label for="login-password-field">Password</label>
     <br /><input name="password" type="password" id="login-password-field" /></p>
