Added JQuery Hashchange plugin

--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,7 @@
         <script type="text/javascript" src="js/lib/jquery-1.5.2.js"></script>
         <script type="text/javascript" src="js/lib/raphael.js"></script>
         <script type="text/javascript" src="js/lib/sprintf-min.js"></script>
+        <script type="text/javascript" src="js/lib/jquery.ba-hashchange.js"></script>
         <script type="text/javascript" src="js/lib/jquery.qtip-min.js"></script>
         <script type="text/javascript" src="js/lib/jquery.scrollTo-min.js"></script>
         <script type="text/javascript" src="js/lib/jquery-ui-1.8.12.custom.min.js"></script>
