Better dialogue box behaviour

--- a/public/panels/post.html
+++ b/public/panels/post.html
@@ -1,5 +1,5 @@
 <form id="post-form">
     <p><label for="post-subject-field">Subject</label>
-    <br /><input name="post-subject" id="post-subject-field" /></p>
+    <br /><input name="post-subject" id="post-subject-field" autofocus /></p>
     <p><textarea name="body" id="post-body-field"></textarea></p>
 </form>
