--- a/public/panels/user.html
+++ b/public/panels/user.html
@@ -1,6 +1,6 @@
 <form id="user-form">
 <p><label for="user-username-field">Handle</label>
-<br /><input name="username" id="user-username-field" /></p>
+<br /><input name="username" id="user-username-field" autofucus /></p>
 <p><label for="user-password-field">Password</label>
-<br /><input name="password" id="user-password-field" /></p>
+<br /><input name="password" type="password" id="user-password-field" /></p>
 </form>
