--- a/public/panels/login.html
+++ b/public/panels/login.html
@@ -1,6 +1,6 @@
 <form id="login-form">
     <p><label for="login-username-field">Handle</label>
-    <br /><input name="login-username" id="login-username-field" autofocus /></p>
+    <br /><input name="login-username" id="login-username-field" class="full-width" autofocus /></p>
     <p><label for="login-password-field">Password</label>
-    <br /><input name="password" type="password" id="login-password-field" /></p>
+    <br /><input name="password" type="password" id="login-password-field" class="full-width" /></p>
 </form>
